@@ -112,11 +112,7 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
-            <source>21</source>
-            <target>21</target>
-            <compilerArgs>
-              <arg>--enable-preview</arg>
-            </compilerArgs>
+            <release>${java.version}</release>
             <annotationProcessorPaths>
               <path>
                 <groupId>org.projectlombok</groupId>
@@ -137,7 +133,7 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
-            <argLine>--enable-preview -XX:+EnableDynamicAgentLoading</argLine>
+            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
           </configuration>
         </plugin>
 
